--- a/public/custom.css
+++ b/public/custom.css
@@ -7,8 +7,22 @@
   );
 }
 
+.custom-item-list{
+  font-size: 23px;
+}
+
+h2{
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .welcome-div {
   padding-right: 50px;
+}
+
+.contact-info-pharagraph{
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .carousel-item {
